--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@vercel/og": "^0.8.5",
     "bcryptjs": "^3.0.3",
     "jose": "^6.1.2",
     "next": "16.0.3",
