--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@upstash/ratelimit": "^2.0.7",
+    "@upstash/redis": "^1.35.7",
     "@vercel/og": "^0.8.5",
     "bcryptjs": "^3.0.3",
     "jose": "^6.1.2",
