--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@dnd-kit/accessibility": "^3.1.1",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@neondatabase/serverless": "^1.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@upstash/ratelimit": "^2.0.7",
@@ -21,7 +24,7 @@
     "@vercel/og": "^0.8.5",
     "bcryptjs": "^3.0.3",
     "jose": "^6.1.2",
-    "next": "16.0.7",
+    "next": "^16.1.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
